objects/Job_Posting__c.object
<CustomObject>
    <label>Job Posting</label>
    <nameField>
        <displayFormat>JP-{0000}</displayFormat>
        <label>Job Posting No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Postings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Employement websites</relationshipLabel>
        <relationshipName>Job_Postings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price_per_post__c</fullName>
        <label>Price per post</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employement_website__c</fullName>
        <label>Employement website</label>
        <referenceTo>Employement_website__c</referenceTo>
        <relationshipLabel>Positions</relationshipLabel>
        <relationshipName>Job_Postings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>